syntax = "proto3";

import "base.proto";
import "app.proto";
import "job.proto";
import "timing.proto";
import "agent.proto";

option go_package = "rpc";

message Monitor {
    string uuid = 1;
    int32 pid = 2;
    float cpu = 3;
    float memory = 4;
    int32 threads = 5;
}

message Archive {
    string uuid = 1;
    int32 pid = 2;
    int64 begin_time = 3;
    int64 end_time = 4;
    int32 status = 5;
    string signal = 6;
}

message AgentMonitor {
    AgentInfo agent = 1;
    Monitor monitor =2;
}

message AppMonitor {
    App app = 1;
    Monitor monitor = 2;
}

message JobMonior {
    Job job = 1;
    Monitor monitor = 2;
}

message TimingMonior {
    Timing timing = 1;
    Monitor monitor = 2;
}

message AppArchive {
    App app = 1;
    Archive archive = 2;
}

message JobArchive {
    Job job = 1;
    Archive archive = 2;
}

message TimingArchive {
    Timing timing = 1;
    Archive archive = 2;
}

service Master {
    rpc Register(AgentInfo) returns (Response) {}
    
    rpc AppList(AgentInfo) returns (AppListResponse) {}
    rpc JobList(AgentInfo) returns (JobListResponse) {}
    rpc TimingList(AgentInfo) returns (TimingListResponse) {}

    rpc AgentMonitorReport(AgentMonitor) returns (Response) {}
    rpc AppMonitorReport(AppMonitor) returns (Response) {}
    rpc JobMoniorReport(JobMonior) returns (Response) {}
    rpc TimingMoniorReport(TimingMonior) returns (Response) {}

    rpc AppArchiveReport(AppArchive) returns (Response) {}
    rpc JobArchiveReport(JobArchive) returns (Response) {}
    rpc TimingArchiveReport(TimingArchive) returns (Response) {}
}